
    o Support for cigars > 32767 characters

    o Mate pairs use pos and mpos values calculated modulo target
      length for pairing, facilitating some representations of mates
      on circular chromosomes.

    o scanBam no longer translates mapq '255' to 'NA'

BUG FIXES

    o segfault on file iteration, introduced in 1.19.35, fixed in
      1.19.44

CHANGES IN VERSION 1.17.0
-------------------------

NEW FEATURES

    o pileup visits entire file if no 'which' argument specified for
      'ScanBamParam' parameter of pileup. Buffered functionality with
      'yieldSize' available to manage memory consumption when working
      with large BAM files

    o pileup 'read_pos_breaks' parameter renamed to 'cycle_bins':
      cycle_bins allows users to differentiate pileup counts based on
      user-defined regions within a read.

    o pileup uses PileupParam and ScanBamParam instances to calculate
      pileup statistics for a BAM file; returns a data.frame with
      columns summarizing information extracted from alignments
      overlapping each genomic position

    o scanBam,BamSampler-method returns requested and actual
      yieldSize, and total reads

    o seqinfo,BamFileList-method returns the merged seqinfo of each
      BamFile; seqlevels and seqlengths behave similarly.

    o scanBamHeader accepts a 'what' argument to control input of the
      targets and / or text portion of the header, and is much faster
      for BAM files with many rnames.

SIGNIFICANT USER-VISIBLE CHANGES

    o rename PileupParam class and constructor -> ApplyPileupsParam

    o seqinfo,BamFile-method orders levels as they occur in the file,
      reverting a change introduced in Rsamtools version 1.15.28
      (version 1.17.16).

BUG FIXES

    o scanBam(BamSampler(), param=param) with a 'which' argument no
      longer mangles element names, and respects yield size

    o applyPileups checks that seqlevels are identical across files
