@@ -4,5 +4,6 @@ r001	163	ref	7	30	8M2I4M1D3M	=	37	39	TTAGATAAAGGATACTG	*
 r002	0	ref	9	30	3S6M1P1I4M	*	0	0	AAAAGATAAGGATA	*
 r003	0	ref	9	30	5H6M	*	0	0	AGCTAA	*	NM:i:1
 r004	0	ref	16	30	6M14N5M	*	0	0	ATAGCTTCAGC	*
+r004a	0	ref	16	30	6=14N5=	*	0	0	ATAGCTTCAGC	*
 r003	16	ref	29	30	6H5M	*	0	0	TAGGC	*	NM:i:0
 r001	83	ref	37	30	9M	=	7	-39	CAGCGCCAT	*
